# b2img

./: CMakeLists.txt  LICENSE  README.md
include/b2img/app/: application.hpp  render_service.hpp
include/b2img/cli/: command_line.hpp
include/b2img/core/: analyzer.hpp  decoder.hpp  encoding.hpp  image.hpp  palette.hpp  render_request.hpp
include/b2img/gui/: main_window.hpp
include/b2img/io/: file_buffer.hpp  ppm_writer.hpp
src/: cli_main.cpp
src/app/: application.cpp  render_service.cpp
src/cli/: command_line.cpp
src/core/: analyzer.cpp  decoder.cpp  palette.cpp
src/gui/: main.cpp  main_window.cpp
src/io/: file_buffer.cpp  ppm_writer.cpp
